--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@ h1 {
 
 input,
 button {
+    margin: 0.3rem;
     display: block;
     width: 100%;
     font-family: 'Times New Roman', Times, serif;
@@ -39,12 +40,12 @@ button {
 
 .form__input {
     padding: 0.5rem;
+    text-align: center;
     border-radius: 2px;
     border: 1px solid #06060c;
 }
 
 .form__button {
-    margin-left: 0.5rem;
     border-radius: 2px;
     padding: 0.5rem;
     color: #eef0bf;
@@ -64,9 +65,8 @@ button {
 }
 
 .result {
-    width: 100%;
+    margin: 0.3rem;
     min-height: 5rem;
-    margin-top: 1rem;
     padding: 1rem;
     display: flex;
     justify-content: center;
@@ -76,3 +76,12 @@ button {
     border-radius: 2px;
     border: 1px solid #06060c;
 }
+
+@media only screen and (max-device-width: 736px) {
+    .form__row  {
+        display: block;
+    }
+}
+
+
+
